# subset-active-learning

./: .gitignore  README.md  colab_train_script_random_1000.ipynb  colab_train_script_random_1000_4000.ipynb  colab_train_script_random_3000-7000.ipynb  colab_training_script.ipynb  explore.ipynb  pyproject.toml  requirements.txt  subset_sampling.ipynb  test.ipynb  train.ipynb  train_script.ipynb  train_subset_classifier.ipynb  uncertainty_sampling.ipynb  uncertainty_sampling.py
scripts/: explore.ipynb  model_batching.ipynb  profiler.ipynb  profiler_stacks.txt
scripts/active_learning/: greedy_search.ipynb  subset_sampling.ipynb  test_subset.ipynb  train_set_classifier.ipynb
scripts/correlation/: analysis.ipynb  correlation.ipynb  debug_roberta.ipynb
scripts/dataset_structure/: train_confidence_model.ipynb  uncertainty.ipynb
scripts/subset_selection/: get_dataset_seqlen.ipynb  gpu_optimization.ipynb  mnli_hans_search.sh  mnli_search.sh  search_subset.ipynb  search_subset.py  simulated_annealing_sst.ipynb  sst_search.sh  test_subset.ipynb  torch_dataloader.ipynb
src/: active_learner.py  subset_classifier.py
subset_active_learning/: active_learner.py  subset_classifier.py
subset_active_learning/active_learning/: embeddings.ipynb  subset_classifier.py  train_set_classifier.ipynb
subset_active_learning/subset_selection/: compare.py  correlation.py  data_loader.py  preprocess.py  select.py  utils.py
subset_selection/: simulated_annealing_sst.ipynb
tests/: test_active_learner.py  test_subset_classifier.py
(+1 files in other folders)
