[tool.poetry]
name = "subset-active-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.13.0"
datasets = "^2.2.1"
transformers = "^4.19.1"
torch = "^1.11.0"
wandb = "^0.12.16"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
